fix chat box misalignment

--- a/src/components/front/landing-page/css/style.css
+++ b/src/components/front/landing-page/css/style.css
@@ -87,7 +87,7 @@ button:focus {
 .image {
   max-width: 100%; }
 
-ul {
+.ul {
   list-style: none;
   padding: 0; }
 
